--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,17 @@
     <description>A template project for building a Neo4j Enterprise Procedure</description>
 
     <properties>
-        <java.version>17</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <neo4j.version>5.26.2</neo4j.version>
-        <neo4j-java-driver.version>5.12.0</neo4j-java-driver.version>
-        <junit-jupiter.version>5.7.0</junit-jupiter.version>
+        <neo4j.version>2025.10.1</neo4j.version>
+        <neo4j-java-driver.version>6.0.2</neo4j-java-driver.version>
+        <junit-jupiter.version>5.12.2</junit-jupiter.version>
         <assertj.version>3.13.2</assertj.version>
         <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
         <slf4j.version>2.0.3</slf4j.version>
     </properties>
 
